<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="logListViewModel"
            type="com.hugoapp.adt.presentation.parking.log.LogViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_more"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_search"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            visible="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:hint="@string/vehicle_plate_label"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:hintEnabled="true"
            app:layout_constraintEnd_toStartOf="@id/bt_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:lines="1"
                android:textSize="12sp"
                app:hintEnabled="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sp_back_button"
            android:text="@string/vehicleLog_search"
            android:textColor="@color/colorWhiteText"
            app:layout_constraintBottom_toBottomOf="@id/til_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/til_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_vehicles"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_search" />

        <TextView
            visible="@{logListViewModel.noDataVisible}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>